<resources>
    <string name="app_name">SafeTrip</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="new_user">Ainda não está registrado?</string>
    <string name="start_capture">Iniciar</string>
    <string name="stop_capture">Parar</string>
    <string name="historic">Histórico</string>
    <string name="history">History</string>
    <string name="video">Vídeo</string>
    <string name="alarm">Alarme</string>
    <string name="existing_user">Já possui uma conta?</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="salvar">Salvar</string>
    <string name="nome_existente">O nome de usuário já está em uso</string>
    <string name="nome_nao_informado">Informe o nome de usuário</string>
    <string name="senha_diferente">As senhas não coincidem</string>
    <string name="usuario_salvo">Usuário salvo com sucesso</string>
    <string name="login_sucesso">Login bem-sucedido</string>
    <string name="senha_incorreta">Senha incorreta</string>
    <string name="senha_requerimento">Senha não corresponde aos requisitos mínimos</string>
    <string name="usuario_incorreto">Nome de usuário não encontrado</string>
    <string name="warning">Atenção</string>
    <string name="danger">Perigo</string>
    <string name="min_password">Mínimo 6 caracteres</string>
    <string name="eq_password">Senhas iguais</string>
    <string name="permissoes_negadas">As permissões não foram aceitas</string>
    <string name="falha_tirar_foto">Falha ao tirar foto: %s</string>
    <string name="falha_enviar_api">Falha ao enviar imagem para a API: %s</string>
    <string name="codigo_resposta">Código de resposta: %s</string>
    <string name="resposta_api">Resposta da API: %s</string>
    <string name="falha_vinculacao_camera">Falha na vinculação da câmera</string>
</resources>