<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:src="@drawable/ic_logo_max"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/et_username" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/et_password"
        android:inputType="textPersonName"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:inputType="textPassword"
        android:hint="@string/senha" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_password"
        android:inputType="textPassword"
        android:hint="@string/confirm_password" />

    <TextView
        android:id="@+id/tv_min_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_password"
        android:layout_below="@id/et_confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/tv_eq_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eq_password"
        android:layout_below="@id/tv_min_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/tv_existing_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing_user"
        android:layout_below="@id/tv_eq_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textColorLink="@color/text_selector"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/bt_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_below="@id/tv_existing_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

</RelativeLayout>