<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VideoActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/pv_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/ib_warning"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/ic_warning"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:contentDescription="@string/warning"
        android:background="@android:color/transparent"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/ib_danger"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/ic_danger"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:contentDescription="@string/danger"
        android:background="@android:color/transparent"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/ib_video_start"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="25dp"
        android:src="@drawable/ic_start_video"
        android:scaleType="centerInside"
        android:padding="10dp"
        android:layout_gravity="bottom|center"
        android:contentDescription="@string/video"
        android:background="@android:color/transparent" />

    <ImageButton
        android:id="@+id/ib_historic"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="56dp"
        android:src="@drawable/ic_historic"
        android:scaleType="centerInside"
        android:layout_gravity="bottom|start"
        android:contentDescription="@string/historic"
        android:background="@android:color/transparent" />

</FrameLayout>